<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/question"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/word"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="273dp">

            <RadioButton
                android:id="@+id/radioFirst"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/purple_200"
                android:button="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.0892857143"
                android:text="@string/option"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <RadioButton
                android:id="@+id/radioSecond"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/purple_200"
                android:button="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.0892857143"
                android:text="@string/option"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <RadioButton
                android:id="@+id/radioThird"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/purple_200"
                android:button="@null"
                android:checked="false"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.0892857143"
                android:text="@string/option"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked" />

        </RadioGroup>

        <Button
            android:id="@+id/submitAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="submitAnswer"
            android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>